used al the requirements

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
             <p class="result-message">You've used all 10 attempts. The number was <span id="correctNumber">0</span>.</p>
             <div class="result-stats">
               <p>Total Losses: <strong id="finalLosses">0</strong></p>
-              <p>Current Streak: <strong id="finalStreakLose">0</strong></p>
-            </div>
+              <p>Current Streak: <strong id="finalStreakLose">0</strong></p></div>
           </div>
           <div class="action-buttons">
             <button class="btn btn-primary" onclick="startGame()">Try Again</button>
